// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constraints applies Marinade stake concentration constraints 1`] = `
"country-validator-0, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-0)
country-validator-1, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-1)
country-validator-2, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-2)
country-validator-3, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-3)
country-validator-4, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-4)
country-validator-5, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-5)
country-validator-6, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-6)
country-validator-7, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-7)
country-validator-8, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-8)
country-validator-9, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-validator-9)
country-aso-validator-0, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-0)
country-aso-validator-1, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-1)
country-aso-validator-2, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-2)
country-aso-validator-3, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-3)
country-aso-validator-4, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-4)
country-aso-validator-5, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-5)
country-aso-validator-6, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-6)
country-aso-validator-7, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-7)
country-aso-validator-8, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-8)
country-aso-validator-9, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (country-aso-validator-9)
aso-validator-0, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-0)
aso-validator-1, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-1)
aso-validator-2, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-2)
aso-validator-3, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-3)
aso-validator-4, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-4)
aso-validator-5, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-5)
aso-validator-6, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-6)
aso-validator-7, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-7)
aso-validator-8, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-8)
aso-validator-9, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (aso-validator-9)
vote-acc--0000000000, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000018)
vote-acc--0000000019, inflation pmpe: 0.19999999999999998, mev pmpe: 0.1684210526315789, bid pmpe: 1, total pmpe: 1.3684210526315788, mnde_target_stake: 0, sam_target_stake: 150000, last constraint: MNDE (vote-acc--0000000019)"
`;

exports[`constraints applies bond constraints and ignores max stake wanted for MNDE stake 1`] = `
"vote-acc--0000000000, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 1600, last constraint: BOND (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 8, last constraint: BOND (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000018)
vote-acc--0000000019, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000019)"
`;

exports[`constraints applies bond constraints to SAM stake 1`] = `
"vote-acc--0000000000, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 800, last constraint: BOND (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000018)
vote-acc--0000000019, inflation pmpe: 6.785714285714286, mev pmpe: 5.7142857142857135, bid pmpe: 0, total pmpe: 12.5, mnde_target_stake: 0, sam_target_stake: 80000, last constraint: BOND (vote-acc--0000000019)"
`;

exports[`constraints applies global stake concentration constraints 1`] = `
"country-validator-0, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-1, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-2, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-3, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-4, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-5, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-6, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-7, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-8, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-9, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-10, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-11, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-12, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-13, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-14, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-15, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-16, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-17, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-18, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-validator-19, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 790000, last constraint: COUNTRY (dummy-country)
country-aso-validator-0, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-1, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-2, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-3, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-4, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-5, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-6, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-7, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-8, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-9, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-10, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-11, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-12, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-13, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-14, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-15, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-16, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-17, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-18, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
country-aso-validator-19, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-0, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-1, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-2, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-3, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-4, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-5, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-6, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-7, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-8, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-9, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-10, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-11, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-12, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-13, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-14, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-15, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-16, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-17, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-18, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
aso-validator-19, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 1, total pmpe: 1.324074074074074, mnde_target_stake: 0, sam_target_stake: 280000, last constraint: ASO (dummy-aso)
vote-acc--0000000000, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000018)
vote-acc--0000000019, inflation pmpe: 0.1759259259259259, mev pmpe: 0.1481481481481481, bid pmpe: 0, total pmpe: 0.324074074074074, mnde_target_stake: 0, sam_target_stake: 1650000, last constraint: MNDE (vote-acc--0000000019)"
`;

exports[`constraints applies minBondBalanceSol constraints to SAM stake 1`] = `
"vote-acc--0000000000, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 700, last constraint: BOND (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 0, last constraint: BOND (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000018)
vote-acc--0000000019, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000019)
vote-acc--0000000020, inflation pmpe: 6.736919738465684, mev pmpe: 5.673195569234259, bid pmpe: 0, total pmpe: 12.410115307699943, mnde_target_stake: 0, sam_target_stake: 80579.42857142858, last constraint: BOND (vote-acc--0000000020)"
`;

exports[`constraints applies validator stake concentration constraints 1`] = `
"dummy-validator, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 4500, last constraint: VALIDATOR (dummy-validator)
vote-acc--0000000000, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000000)
vote-acc--0000000001, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000001)
vote-acc--0000000002, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000002)
vote-acc--0000000003, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000003)
vote-acc--0000000004, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000004)
vote-acc--0000000005, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000005)
vote-acc--0000000006, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000006)
vote-acc--0000000007, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000007)
vote-acc--0000000008, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 1, total pmpe: 1.8654797230464886, mnde_target_stake: 0, sam_target_stake: 348.98170521228855, last constraint: BOND (vote-acc--0000000008)
vote-acc--0000000009, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000009)
vote-acc--0000000010, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000010)
vote-acc--0000000011, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000011)
vote-acc--0000000012, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000012)
vote-acc--0000000013, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000013)
vote-acc--0000000014, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000014)
vote-acc--0000000015, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000015)
vote-acc--0000000016, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000016)
vote-acc--0000000017, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000017)
vote-acc--0000000018, inflation pmpe: 0.4698318496538081, mev pmpe: 0.3956478733926804, bid pmpe: 0, total pmpe: 0.8654797230464886, mnde_target_stake: 0, sam_target_stake: 1155.4285714285713, last constraint: BOND (vote-acc--0000000018)"
`;
